전표처리 확인 테스트 및 payload구조 수정